refactor some issue